Do minor finishing touches

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,3 +6,20 @@
 	</div>
 
 </footer>
+<!--
+If you're nerdy enough to be snooping around here, join us!: 
+https://discord.gg/vCDJK9xyvm
+
+Also: I am not runtime and I approve of this cheese (excluding the ruby).
+         _--"-.
+      .-"      "-.
+     |""--..      '-.
+     |      ""--..   '-.
+     |.-. .-".    ""--..".
+     |'./  -_'  .-.      |
+     |      .-. '.-'   .-'
+     '--..  '.'    .-  -.
+          ""--..   '_'   :
+                ""--..   |
+                      ""-'
+-->
