--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: default
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/assets/css/mod-list-style.css" | relative_url }}">
-    <link rel="alternate" type="text/xml" title="Mod Releases" href="/feed.xml">
+    <link rel="alternate" type="application/rss+xml" title="Mod Releases" href="/feed.xml">
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
       {%- include google-analytics.html -%}
     {%- endif -%}
