Revert "Add initial RSS feed"
This reverts commit 91142ffc4764c6e348f71ee7f51c184b3fb58eff.

--- a/_layouts/mod-list.html
+++ b/_layouts/mod-list.html
@@ -9,7 +9,7 @@ layout: mod-list
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/assets/css/mod-list-style.css" | relative_url }}">
-    <link rel="alternate" type="application/rss+xml" title="Mod Releases" href="/feed.xml">
+    {%- feed_meta -%}
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
       {%- include google-analytics.html -%}
     {%- endif -%}
