--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-  <link type="application/atom+xml" rel="alternate" href="https://neosmodloader.com/feed.xml" title="Neos Mod Releases">
+  <link type="application/atom+xml" rel="alternate" href="{{ "/feed.xml" | relative_url }}" title="Neos Mod Releases">
 
   {%- include custom-head.html -%}
   
